[package]
name = "s3put"
version = "0.1.2"
edition = "2021"
license = "MIT"
keywords = ["aws","s3"]
description = "Upload a single file/stream to S3 using chunks"
homepage = "https://github.com/VeaaC/s3put"
repository = "https://github.com/VeaaC/s3put"

[dependencies]
structopt = "0.3.26"
anyhow = "1.0.68"
crossbeam = "0.8.2"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
futures = "0.3.25"
num_cpus = "1.15.0"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "fs", "sync"] }
http = "0.2.8"
