[package]
name = "s3put"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["aws","s3"]
description = "Upload a single file/stream to S3 using chunks"
homepage = "https://github.com/VeaaC/s3put"
repository = "https://github.com/VeaaC/s3put"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0.79"
crossbeam = "0.8.4"
aws-config = { version = "1.1.4", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.14.0"
futures = "0.3.30"
num_cpus = "1.16.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "fs", "sync"] }
http = "1.0.0"
